--- a/MasyvaiPasikartojimas/MasyvaiPasikartojimas/MasyvaiPasikartojimas.csproj
+++ b/MasyvaiPasikartojimas/MasyvaiPasikartojimas/MasyvaiPasikartojimas.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{264B05CA-3AC3-4AC1-9D6B-5F39B1BF295D}</ProjectGuid>
+    <ProjectGuid>{AD4497F7-89C7-4E4B-B94E-0EC9A18E5366}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>PrezidentoRinkimai</RootNamespace>
-    <AssemblyName>PrezidentoRinkimai</AssemblyName>
+    <RootNamespace>MasyvaiPasikartojimas</RootNamespace>
+    <AssemblyName>MasyvaiPasikartojimas</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -35,7 +35,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
